--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h4>Become a web and Software developer</h4>
             <p> I already learned the basic Html, Css, JavaScript, React, Vue, Php, Asp DotNet, Java and Sql. I can build different website. I can even teach my grandma how to make simple website.
             </p>
-            <a class="primary-btn" href="#projects">Projects</a>
+            <a class="primary-btn" href="img/CV - Drin Çerkini.pdf" download>Download CV</a>
         </div>
     </section>
     
