--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
                In this web app a user can add different categories of books, they can upload books and information about that book using forms, delete and update books, upload different authors, 
                it has a blog sections in which users can leave a comment etc. it has a lot of others operations.
             </p>
-            <a href="https://github.com/drincerkini/Lab-Course-1" target="#" >Visit in Github</a>
+            <!-- <a href="https://github.com/drincerkini/Lab-Course-1" target="#" >Visit in Github</a> -->
+
+            <video width="900" height="500" autoplay muted>
+                <source src="./img/webPrograming.mp4" >
+                Your browser does not support the video tag.
+            </video>
         </div>
     
         <div class="experience-item">
